scss/main.scss
@use '@matteusan/himig';

@use '@matteusan/himig/ms-badge';
@use '@matteusan/himig/ms-button';
@use '@matteusan/himig/ms-card';
@use '@matteusan/himig/ms-list';
@use '@matteusan/himig/ms-link';
@use '@matteusan/himig/ms-select-field';
@use '@matteusan/himig/ms-utils';

@use 'components/ms-carousel';
@use 'components/ms-footer';
@use 'components/ms-header';
@use 'components/ms-hero';
@use 'components/ms-navbar';
@use 'components/ms-title-bar';
@use 'components/preview-image';

@use 'page/home';
@use 'page/markdown';

@use 'utils';

$ms-material-dark: (
  200: #948b8b,
  300: #6e6363,
  400: #3d3838,
  600: #211f1f,
  800: #111010,
  'ink': #fff
);

$ms-material-light: (
  200: hsl(43, 100%, 99%),
  300: hsl(20, 7%, 82%),
  400: hsl(40, 4%, 72%),
  600: hsl(60, 2%, 54%),
  800: hsl(40, 2%, 37%),
  'ink': #111010
);

@include himig.init(
  $primary: (
    100: oklch(76% 0.008 17.333deg),
    200: oklch(64.1% 0.011 17.439deg),
    300: oklch(46% 0.009 17.49deg),
    400: oklch(34.6% 0.007 17.497deg),
    500: oklch(28.8% 0.004 17.412deg),
    600: oklch(24.6% 0.003 17.363deg),
    700: oklch(20.3% 0.003 17.421deg),
    800: oklch(17% 0.002 17.321deg),
    'ink': oklch(100% 0 0deg)
  ),
  $surface: (
    100: oklch(76% 0.008 17.333deg),
    200: oklch(64.1% 0.011 17.439deg),
    300: oklch(46% 0.009 17.49deg),
    400: oklch(34.6% 0.007 17.497deg),
    500: oklch(28.8% 0.004 17.412deg),
    600: oklch(24.6% 0.003 17.363deg),
    700: oklch(20.3% 0.003 17.421deg),
    800: oklch(17% 0.002 17.321deg),
    'ink': oklch(100% 0 0deg)
  ),
  $supertitle: (
    'family': 'family.serif',
    'size': 'size.2xl',
    'weight': 600,
  ),
  $title: (
    'family': 'family.serif',
    'size': 'size.xl',
    'weight': 400
  ),
  $subtitle: (
    // 'family': 'family.serif',
    'weight': 200
  ),
  $extend: (
    'accent-ink': oklch(13.2% 0.03 61.725deg) !important,
    'ms-orange-inverted': (
      100: oklch(47.1% 0.065 48.07deg),
      200: oklch(36.1% 0.065 48.07deg),
      300: oklch(27.6% 0.058 54.676deg),
      400: oklch(21.4% 0.041 49.63deg),
      500: oklch(16.4% 0.041 49.63deg),
      600: oklch(13.2% 0.03 61.725deg),
      700: oklch(9.2% 0.03 61.725deg),
      800: oklch(5.2% 0.03 61.725deg),
      ink: oklch(65.4% 0.157 49.102deg),
    ),
    'viewport-layout-limit': 1507px,
    'viewport-content-limit': 1077px
  )
) {
  #__next {
    min-height: 100dvh;
    display: flex;
    flex-flow: column nowrap;
    justify-content: space-between;
    overflow-x: clip;
    position: relative;
  }

  html {
    overflow-x: clip;
    scroll-padding-block-start: calc(55px + 2em);
    scroll-behavior: auto;
  }

  body {
    --body-fill: linear-gradient(12deg, rgba(23,17,17,1), rgba(61,56,56,0.5)),
    url("data:image/svg+xml,%3Csvg viewBox='0 0 280 280' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='2.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E") !important;
  }

  main.content-wrap {
    width: calc(100% - 50px) !important;
    @include himig.key-bind('content-wrap-max-width', 'viewport-content-limit');
  }

  ::-moz-selection,
  ::selection {
    color: himig.token-get('accent-ink');
    background: himig.token-get('accent-400');
  }

  @include ms-badge.render(
    $struct: (
      padding: ('sm' 'md')
    )
  );
  @include ms-badge.extend('archived') {
    @include ms-badge.color((
      fill: 'ms-yellow.400',
      ink: 'accent-ink',
      border: 'ms-yellow.400'
    ));
  }
  .ms-badge__label {
    white-space: nowrap;
  }

  @include ms-button.render(
    $struct: (
      padding: ('sm' 'md')
    ),
    $typography: (
      line-height: 'normal'
    )
  );

  .ms-button__icon {
    display: grid;
    place-items: center;

    & > * {
      max-width: none !important;
    }
  }

  @include ms-button.extend('outlined') {
    box-shadow: 0 3px 0 himig.token-get('accent-600');

    &:active {
      transform: translateY(3px) !important;
      box-shadow: 0 0 0 himig.token-get('accent-600') !important;
    }
  }

  @include ms-button.extend('filled') {
    box-shadow: 0 3px 0 himig.token-get('accent-600');

    &:active {
      transform: translateY(3px) !important;
      box-shadow: 0 0 0 himig.token-get('accent-600') !important;
    }
  }

  @include ms-button.extend('full-width') {
    @include ms-button.struct((
      width: (
        default: 100%,
        max: 100%,
      ),
      height: 100%
    ));
  }

  @include ms-button.extend('inverted') {
    @include ms-button.color((
      fill: 'ms-orange-inverted-400',
      ink: 'ms-orange-inverted-ink',
      border: 'ms-orange-inverted-400',
    ));
    box-shadow: 0 3px 0 himig.token-get('ms-orange-inverted-200');

    &:hover{
      @include ms-button.color((
        fill: 'ms-orange-inverted-300',
        ink: 'ms-orange-inverted-ink',
        border: 'ms-orange-inverted-300',
      ));
    }

    &:focus {
      @include ms-button.color((
        fill: 'ms-orange-inverted-300',
        ink: 'ms-orange-inverted-ink',
        border: 'ms-orange-inverted-300',
      ));

      &:active {
        @include himig.key-bind('button-outline', 2px solid rgb(from himig.token-get-raw('ms-orange-inverted-300') r g b / himig.$color-outline-focus-opacity));
      }
    }

    &:active {
      @include ms-button.color((
        fill: 'ms-orange-inverted-200',
        ink: 'ms-orange-inverted-ink',
        border: 'ms-orange-inverted-200',
      ));
      transform: translateY(3px) !important;
      box-shadow: 0 0 0 himig.token-get('ms-orange-inverted-200') !important;
    }
  }

  @include ms-button.extend('icon-only.large') {
    @include ms-button.struct((
      height: (
        default: 100%,
        max: 100%,
      ),
      padding: 'md',
    ));
  }

  @include ms-card.render(
    $color: (
      border: rgba(0 0 0 / 0)
    ),
    $struct: (
      padding: 'lg',
      radius: 'none'
    ),
    $typography: (
      family: (
        title: 'title',
      ),
      weight: (
        title: 'normal'
      ),
      line-height: (
        title: 'supertitle'
      )
    )
  );

  #works .ms-card {
    &:hover {
      --ms-card-radius: #{himig.primitive-token-get('radius.2xl')};
      transition: border-radius himig.token-get('time-short') himig.token-get('easing');

      .ms-card__media {
        filter: none !important;

        @include himig.breakpoint-create('large') {
          filter:
            saturate(15%)
            blur(5px)
            brightness(50%) !important;
        }
      }
    }

    .ms-card__details {
      --ms-card-fill: transparent !important;

      @include himig.breakpoint-create('large') {
        .ms-card__header {
          --ms-card-header-padding: #{himig.primitive-token-get('padding.xl')} #{himig.primitive-token-get('padding.xl')} 0;
          --ms-card-title-size: #{himig.token-get('size-supertitle')};
          --ms-card-subtitle-size: #{himig.token-get('size-body')};
          --ms-card-subtitle-weight: #{himig.token-get('weight-subtitle')};
          --ms-card-subtitle-line-height: #{himig.token-get('line-height-supertitle')};
        }

        .ms-card__content {
          --ms-card-padding: 0 #{himig.primitive-token-get('padding.xl')} #{himig.primitive-token-get('padding.xl')};
        }
      }
    }
  }

  %status-chip {
    position: absolute;
    top: 10px;
    right: 10px;
    padding: 0.3rem 0.5rem;
    font-weight: 700;
    border-radius: 0.5rem;
  }

  @include ms-card.extend('archived') {
    position: relative;

    &::after {
      @extend %status-chip;
      content: 'Archived';
      background: himig.primitive-token-get('ms-yellow.400');
      color: himig.token-get('accent-ink');
      font-size: himig.to-rem(12px);
    }
  }

  @include ms-card.extend('hiatus') {
    position: relative;

    &::after {
      @extend %status-chip;
      content: 'On-hiatus';
      background: himig.primitive-token-get('ms-neutral.400');
      color: #fff;
      font-size: himig.to-rem(12px);
    }
  }

  @include ms-list.render(
    $struct: (padding: ('sm' 0))
  );

  @include ms-link.render();

  @include ms-select-field.render(
    $struct:(
      width: 'max-content'
    )
  );

  @layer components {
    @include ms-carousel.render();
    @include ms-footer.render();
    @include ms-header.render();
    @include ms-hero.render();
    @include ms-navbar.render();
    @include ms-title-bar.render();
  }

  .ms-title-bar {
    align-items: center;

    .ms-title-bar__icon {
      display: grid;
      place-items: center;
    }
  }

  @include ms-utils.layout();
  @include ms-utils.color();
  @include ms-utils.struct();
  @include ms-utils.typography();

  // Arbitrary utils
  @include utils.render();

  // Pages
  @include home.render();
  @include markdown.render();

  // Markdown components
  @include preview-image.render();

  .grain {
    z-index: 0;
    justify-content: center;
    align-items: center;
    display: flex;
    position: fixed;
    inset: 0;
    overflow: hidden;

    .grain-image {
      background-image: url('/img/grain.png');
      background-position: 50%;
      background-size: 256px;
      flex: none;
      width: 300%;
      max-width: none;
      height: 300%;
      position: absolute;
      inset: -150% 0% 0% -150%;
      opacity: 0.75;
      animation: 2s steps(1) infinite noise;
    }
  }

  @keyframes load-in {
    0% {
      opacity: 0;
      transform: translateY(20px);
    }

    100% {
      opacity: 1;
      transform: translateY(0);
    }
  }

  @keyframes load-out {
    0% {
      opacity: 1;
      transform: translateY(0);
    }

    100% {
      opacity: 0;
      transform: translateY(20px);
    }
  }

  @keyframes fix-z-index {
    0%, 100% { z-index: 1; }
  }

  @keyframes noise {
    0%, 100% {
      background-position: 0 0;
    }
    10% {
      background-position: -5% -10%;
    }
    20% {
      background-position: -15% 5%;
    }
    30% {
      background-position: 7% -25%;
    }
    40% {
      background-position: 20% 25%;
    }
    50% {
      background-position: -25% 10%;
    }
    60% {
      background-position: 15% 5%;
    }
    70% {
      background-position: 0 15%;
    }
    80% {
      background-position: 25% 35%;
    }
    90% {
      background-position: -10% 10%;
    }
  }

  @keyframes loop {
    0% {
      transform: translateX(0);
    }
    100% {
      transform: translateX(-50%);
    }
  }
}

